# spatial-audio-engine

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cpal-demo/: Cargo.toml
crates/cpal-demo/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/include/: engine.h
crates/engine/src/: audio_bed.rs  biquad.rs  c_api.rs  consts.rs  conv.rs  coord.rs  decoder.rs  diffuser.rs  distance.rs  engine.rs  externalizer.rs  hrtf.rs  legacy_post_decoder.rs  lib.rs  math.rs  ramp.rs  resampler.rs  reverb.rs  sh.rs  sh_rotation.rs  source.rs  w_binauralizer.rs
crates/engine/tests/: hrtf_decode.rs
crates/vst/: Cargo.toml
crates/vst/src/: lib.rs
juce/: CMakeLists.txt
juce/Source/: HeadPoseProcessor.h  HeadTracker.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
juce/Source/Trackers/: OscHeadTracker.cpp  OscHeadTracker.h
juce/docs/: headtracking_protocol.md
juce/tools/: .gitignore
juce/tools/buds_daemon/: build.sh  main.mm
juce/tools/buds_sniffer/: analyze.py  build.sh  main.mm
