[workspace]
members = [
    "crates/engine",
    "crates/vst",
    "crates/cli",
    "crates/cpal-demo",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]

# Keep line-level debug info in release builds so Instruments / `sample`
# can symbolicate the engine staticlib when profiling the plugin in a
# host. `debug = 1` is line tables only — no perf cost.
[profile.release]
debug = 1
